# ImmutabilityAnalysis

./: CMakeLists.txt  README.txt
Hellooo/: CMakeLists.txt  Hellooo.cpp
Immutability/: CMakeLists.txt
Immutability/ImmutabilityAnalysis/: CMakeLists.txt  ClassQuery.cpp  ClassQuery.h  Database.cpp  Database.h  Debug.h  FunctionAnalysis.cpp  FunctionAnalysis.h  FunctionUtil.h  Graph.h  ImmutabilityAnalysis.cpp  ImmutabilityAnalysis.h  MemQuery.cpp  MemQuery.h  MemoryAliases.h  Node.h  NodeAliasTracker.h  Query.h  TypeUtil.h
tests/: TestConstSetter.cpp  TestConstSetter.ll  hellooo.bc  hellooo.c
